# project1205

./: .env.example  .gitignore  Makefile  Procfile  README.md  pyproject.toml  railway.toml  requirements-api.txt  requirements.txt
.streamlit/: secrets.toml.example
docs/: architecture-phases.md  edge-cases.md  operations.md  problemstatement.md  streamlit-deploy.md
docs/adr/: 001-configuration-and-limits.md
phase1/: __init__.py  ingest.py  io.py  normalize.py  pipeline.py  report.py  schema.py
phase2/: __init__.py  budget.py  filters.py  preferences.py  retrieval.py
phase3/: __init__.py  groq_client.py  parser.py  pipeline.py  prompts.py  schema.py
phase4/: __init__.py  __main__.py  app.py  errors.py  metrics.py  rate_limit.py  repository.py  schemas.py  service.py
restaurant_recs/: __init__.py  __main__.py  cli.py  config.py  filter_args.py
streamlit_app/: __init__.py  app.py  bootstrap.py  client.py  local_backend.py  settings_loader.py
tests/: test_phase1_io.py  test_phase1_normalize.py  test_phase1_pipeline.py  test_phase2_retrieval.py  test_phase3_parser.py  test_phase3_pipeline.py  test_phase4_api.py  test_settings.py  test_streamlit_backend_mode.py  test_streamlit_client.py
tests/fixtures/: hf_raw_rows.json
web/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts  types.ts
