[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-recs"
version = "0.1.0"
description = "AI-powered restaurant recommendations (Zomato-inspired); Phase 0 foundations."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic-settings>=2.2.0",
    "datasets>=2.16.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "openai>=1.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
streamlit = [
    "streamlit>=1.28.0",
    "httpx>=0.27.0",
]

[project.scripts]
restaurant-recs = "restaurant_recs.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["restaurant_recs*", "phase1*", "phase2*", "phase3*", "phase4*", "streamlit_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
